--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,20 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "To Do",
+  "name": "CoderPrans To Do",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "todos.jpg",
+      "size": "900x900",
+      "type": "image/jpeg" 
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#209cee",
   "background_color": "#ffffff"
 }
