--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,11 +9,11 @@
     },
     {
       "src": "phone3.png",
-      "size": "144x144",
+      "size": "144x144 64x64 32x32 24x24 16x16",
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#209cee",
   "background_color": "#ffffff"
