--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,18 @@
   "name": "CoderPrans To Do",
   "icons": [
     {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"  
+    },
+    {
       "src": "todos.png",
       "size": "512x512",
       "type": "image/png" 
     },
     {
       "src": "phone3.png",
-      "size": "144x144 64x64 32x32 24x24 16x16",
+      "sizes": "144x144 64x64 32x32 24x24 16x16",
       "type": "image/png"
     }
   ],
